# project-a-front

./: .gitignore  bun.lockb  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/libs/lib-http-client/: Cargo.toml
src-tauri/src/: error.rs  main.rs
src-tauri/src/api/: project.rs  task.rs  timerecord.rs
src-tauri/src/client/: client.rs  cookie.rs  error.rs  mod.rs  response.rs
src-tauri/src/command/: auth.rs  error.rs  mod.rs
src-tauri/src/http_requests/: auth.rs  error.rs  mod.rs  taskprogress.rs  user.rs
src/app/: greet.tsx  page.tsx  project.tsx  task.tsx
src/components/: ListTask.vue  SingleTask.vue
src/stores/: project.ts  task.ts  taskprogress.ts  timerecord.ts  user.ts
src/views/: HomeView.vue
