[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[features]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
# -- Json
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# -- Tauri
tauri = { version = "1.6.1", features = ["api-all"] }

lib-http-client = { path="libs/lib-http-client" }
