[package]
name = "lib-http-client"
version = "0.1.9"
edition = "2021"
[features]
color-output = ["url", "colored_json", "colored"]

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
reqwest = {version = "0.11", features = ["cookies", "json"]}
reqwest_cookie_store = "0.6"
# Note: It seems request_cookie_store doe snot support cookie 0.18
#       So, sticking with 0.17 for now. 
cookie = "0.17" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.colored]
version = "2.0.0"
optional = true

[dependencies.url]
version = "2.4.0"
optional = true

[dependencies.colored_json]
version = "4.1"
optional = true

[dev-dependencies]
anyhow = "1"
